@@ -51,7 +51,7 @@ namespace {
 const int NNormalSurfaceList::STANDARD = 0;
 const int NNormalSurfaceList::QUAD = 1;
 const int NNormalSurfaceList::AN_LEGACY = 100;
-const int NNormalSurfaceList::QUAD_OCT = 101;
+const int NNormalSurfaceList::AN_QUAD_OCT = 101;
 const int NNormalSurfaceList::AN_STANDARD = 102;
 const int NNormalSurfaceList::EDGE_WEIGHT = 200;
 const int NNormalSurfaceList::FACE_ARCS = 201;
