@@ -44,7 +44,7 @@ namespace Coordinates {
                 return i18n("Legacy almost normal (pruned tri-quad-oct)");
             if (coordSystem == NNormalSurfaceList::QUAD)
                 return i18n("Quad normal");
-            if (coordSystem == NNormalSurfaceList::QUAD_OCT)
+            if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT)
                 return i18n("Quad-oct almost normal");
             if (coordSystem == NNormalSurfaceList::EDGE_WEIGHT)
                 return i18n("Edge weight");
@@ -60,7 +60,7 @@ namespace Coordinates {
                 return i18n("legacy almost normal (pruned tri-quad-oct)");
             if (coordSystem == NNormalSurfaceList::QUAD)
                 return i18n("quad normal");
-            if (coordSystem == NNormalSurfaceList::QUAD_OCT)
+            if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT)
                 return i18n("quad-oct almost normal");
             if (coordSystem == NNormalSurfaceList::EDGE_WEIGHT)
                 return i18n("edge weight");
@@ -73,7 +73,7 @@ namespace Coordinates {
     bool generatesAlmostNormal(int coordSystem) {
         return (coordSystem == NNormalSurfaceList::AN_STANDARD ||
                 coordSystem == NNormalSurfaceList::AN_LEGACY ||
-                coordSystem == NNormalSurfaceList::QUAD_OCT);
+                coordSystem == NNormalSurfaceList::AN_QUAD_OCT);
     }
 
     unsigned long numColumns(int coordSystem, regina::NTriangulation* tri) {
@@ -85,7 +85,7 @@ namespace Coordinates {
             return tri->getNumberOfTetrahedra() * 10;
         else if (coordSystem == NNormalSurfaceList::QUAD)
             return tri->getNumberOfTetrahedra() * 3;
-        else if (coordSystem == NNormalSurfaceList::QUAD_OCT)
+        else if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT)
             return tri->getNumberOfTetrahedra() * 6;
         else if (coordSystem == NNormalSurfaceList::EDGE_WEIGHT)
             return tri->getNumberOfEdges();
@@ -118,7 +118,7 @@ namespace Coordinates {
         } else if (coordSystem == NNormalSurfaceList::QUAD) {
             return QString("%1: %2").arg(whichCoord / 3).
                 arg(regina::vertexSplitString[whichCoord % 3]);
-        } else if (coordSystem == NNormalSurfaceList::QUAD_OCT) {
+        } else if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT) {
             if (whichCoord % 6 < 3)
                 return i18n("Q%1: %2").arg(whichCoord / 6).
                     arg(regina::vertexSplitString[whichCoord % 6]);
@@ -164,7 +164,7 @@ namespace Coordinates {
             return i18n("Tetrahedron %1, quad splitting vertices %2").
                 arg(whichCoord / 3).
                 arg(regina::vertexSplitString[whichCoord % 3]);
-        } else if (coordSystem == NNormalSurfaceList::QUAD_OCT) {
+        } else if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT) {
             if (whichCoord % 6 < 3)
                 return i18n("Tetrahedron %1, quad splitting vertices %2").
                     arg(whichCoord / 6).
@@ -211,7 +211,7 @@ namespace Coordinates {
                     whichCoord / 10, (whichCoord % 10) - 7);
         } else if (coordSystem == NNormalSurfaceList::QUAD) {
             return surface.getQuadCoord(whichCoord / 3, whichCoord % 3);
-        } else if (coordSystem == NNormalSurfaceList::QUAD_OCT) {
+        } else if (coordSystem == NNormalSurfaceList::AN_QUAD_OCT) {
             if (whichCoord % 6 < 3)
                 return surface.getQuadCoord(whichCoord / 6, whichCoord % 6);
             else
